Edited linkedin username

--- a/_config.yml
+++ b/_config.yml
@@ -63,7 +63,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : "linkedin.com/in/siyuan-liang-1579142a6"
+  linkedin         : "siyuan-liang-1579142a6"
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
